Run first tests, bad results

--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -153,14 +153,14 @@
    ],
    "source": [
     "dataset.drop_duplicates(inplace=True)\n",
-    "y = dataset['Selling_Price']\n",
-    "X = dataset.drop('Selling_Price', axis=1)\n",
+    "y = dataset['Present_Price']\n",
+    "X = dataset.drop('Present_Price', axis=1)\n",
     "print(X.shape, y.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
      "output_type": "stream",
      "text": [
       "['Car_Name', 'Fuel_Type', 'Selling_type', 'Transmission']\n",
-      "['Year', 'Present_Price', 'Driven_kms', 'Owner']\n"
+      "['Year', 'Selling_Price', 'Driven_kms', 'Owner']\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "4  0.0  1.0  0.0  1.0  0.0  0.0  1.0"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "4                      0.0                     0.0                  1.0  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Year</th>\n",
-       "      <th>Present_Price</th>\n",
+       "      <th>Selling_Price</th>\n",
        "      <th>Driven_kms</th>\n",
        "      <th>Owner</th>\n",
        "      <th>Fuel_Type_CNG</th>\n",
@@ -508,7 +508,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2014</td>\n",
-       "      <td>5.59</td>\n",
+       "      <td>3.35</td>\n",
        "      <td>27000</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -522,7 +522,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2013</td>\n",
-       "      <td>9.54</td>\n",
+       "      <td>4.75</td>\n",
        "      <td>43000</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -536,7 +536,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2017</td>\n",
-       "      <td>9.85</td>\n",
+       "      <td>7.25</td>\n",
        "      <td>6900</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -550,7 +550,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2011</td>\n",
-       "      <td>4.15</td>\n",
+       "      <td>2.85</td>\n",
        "      <td>5200</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -564,7 +564,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2014</td>\n",
-       "      <td>6.87</td>\n",
+       "      <td>4.60</td>\n",
        "      <td>42450</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -580,12 +580,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Year  Present_Price  Driven_kms  Owner  Fuel_Type_CNG  Fuel_Type_Diesel  \\\n",
-       "0  2014           5.59       27000      0            0.0               0.0   \n",
-       "1  2013           9.54       43000      0            0.0               1.0   \n",
-       "2  2017           9.85        6900      0            0.0               0.0   \n",
-       "3  2011           4.15        5200      0            0.0               0.0   \n",
-       "4  2014           6.87       42450      0            0.0               1.0   \n",
+       "   Year  Selling_Price  Driven_kms  Owner  Fuel_Type_CNG  Fuel_Type_Diesel  \\\n",
+       "0  2014           3.35       27000      0            0.0               0.0   \n",
+       "1  2013           4.75       43000      0            0.0               1.0   \n",
+       "2  2017           7.25        6900      0            0.0               0.0   \n",
+       "3  2011           2.85        5200      0            0.0               0.0   \n",
+       "4  2014           4.60       42450      0            0.0               1.0   \n",
        "\n",
        "   Fuel_Type_Petrol  Selling_type_Dealer  Selling_type_Individual  \\\n",
        "0               1.0                  1.0                      0.0   \n",
@@ -602,7 +602,7 @@
        "4                     0.0                  1.0  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,14 +614,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.013047774993256989\n"
+      "0.02727319561119458\n"
      ]
     }
    ],
@@ -641,14 +641,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9153795666463147\n"
+      "1.6320915778564191\n"
      ]
     }
    ],
@@ -684,25 +684,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def test(model = XGBRegressor(random_state=7)):\n",
+    "\n",
+    "    pipe = Pipeline(steps=[\n",
+    "        ('preprocess', preprocessor),\n",
+    "        ('model', model)\n",
+    "    ])\n",
+    "\n",
+    "    pipe.fit(X,y)\n",
+    "    pred = pipe.predict(X)\n",
+    "    mae = mean_absolute_error(pred, y)\n",
+    "\n",
+    "    cv_scores = -cross_val_score(pipe, X, y, scoring='neg_mean_absolute_error', cv=5)\n",
+    "    mae = cv_scores.mean()\n",
+    "\n",
+    "    return(mae)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.dtype[object_]' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\DevSoft\\Studying\\Kaggle\\Project1_UsedCars\\UsedCarsPricePrediction\\XGBoost.ipynb Célula: 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/DevSoft/Studying/Kaggle/Project1_UsedCars/UsedCarsPricePrediction/XGBoost.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m OH_col_names\u001b[39m.\u001b[39;49mdtype()\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'numpy.dtype[object_]' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.01, 10, 6.427630022609302]\n",
+      "[0.01, 50, 4.568808706464053]\n",
+      "[0.01, 100, 3.19247252974098]\n",
+      "[0.01, 500, 1.6441062259886894]\n",
+      "[0.01, 1000, 1.6379666842856646]\n",
+      "[0.05, 10, 4.522972872389562]\n",
+      "[0.05, 50, 1.8272774986642226]\n",
+      "[0.05, 100, 1.638149958855284]\n",
+      "[0.05, 500, 1.6516682606164341]\n",
+      "[0.05, 1000, 1.6553186400206072]\n",
+      "[0.1, 10, 3.1077222015764754]\n",
+      "[0.1, 50, 1.6458545217703289]\n",
+      "[0.1, 100, 1.6425568786842337]\n",
+      "[0.1, 500, 1.6728641214630695]\n",
+      "[0.1, 1000, 1.6728094499967192]\n",
+      "[0.5, 10, 1.7287719670771877]\n",
+      "[0.5, 50, 1.7346822195094522]\n",
+      "[0.5, 100, 1.7353795035820894]\n",
+      "[0.5, 500, 1.7353952245058313]\n",
+      "[0.5, 1000, 1.7353952245058313]\n",
+      "[1, 10, 2.013215060647598]\n",
+      "[1, 50, 2.010976291248758]\n",
+      "[1, 100, 2.0109762962158113]\n",
+      "[1, 500, 2.010976296811858]\n",
+      "[1, 1000, 2.010976296811858]\n"
      ]
     }
    ],
    "source": [
+    "learning_rates = [0.01, 0.05, 0.1, 0.5, 1]\n",
+    "nums_estimators = [10, 50, 100, 500, 1000]\n",
+    "results = []\n",
     "\n",
+    "for lr in learning_rates:\n",
+    "    for num in nums_estimators:\n",
+    "        res = test(XGBRegressor(learning_rate = lr, n_estimators = num, random_state=7))\n",
+    "        set = [lr, num, res]\n",
+    "        results.append(set)\n",
+    "        print(set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6425568786842337\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = XGBRegressor(learning_rate = 0.1, n_estimators = 100, random_state=7)\n",
+    "mae = test(m)\n",
+    "print(mae)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.541036789297662\n",
+      "21.78 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_present_price = y.mean()\n",
+    "print(average_present_price)\n",
     "\n",
-    "\n"
+    "relative_error = round(mae/average_present_price *100, 2)\n",
+    "print(relative_error, \"%\")"
    ]
   },
   {
