Final adjustments for posting

--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "Hi! I'm Douglas and I'm a Data Science enthusiast trying to learn everything I think I need to become a Data Scientist.\n",
     "\n",
-    "I took another step outside my studying plans and did one more quick Kaggle course on [**Intermediate Machine Learning**](https://www.kaggle.com/learn/intermediate-machine-learning). There they use the famous housing prices example with both Melbourn and Iowa data and extend their [**Introductory course*](https://medium.com/r/?url=https%3A%2F%2Fwww.kaggle.com%2Flearn%2Fintro-to-machine-learning) with more intermediate concepts like dealing with missing values and categorical features, pipelines, cross-validation and, most important of all (for me, who hadn't seen it before) the XGBoost algorithm. \n",
+    "I took another step outside my studying plans and did one more quick Kaggle course on [**Intermediate Machine Learning**](https://www.kaggle.com/learn/intermediate-machine-learning). There they use the famous housing prices example with both Melbourn and Iowa data and extend their [Introductory course](https://medium.com/r/?url=https%3A%2F%2Fwww.kaggle.com%2Flearn%2Fintro-to-machine-learning) with more intermediate concepts like dealing with missing values and categorical features, pipelines, cross-validation and, most important of all (for me, who hadn't seen it before) the XGBoost algorithm. \n",
     "\n",
     "![Kaggle Completion Certificate](img/certificate_2.png)\n",
     "\n",
-    "If you read my tutorialish article on the content of their first course [**My First Machine Learning Algorithm**](https://medium.com/@douglas.rochedo/decision-tree-and-random-forest-for-predicting-used-car-prices-9233478818b0) you will notice that I, instead of them, used a Used Cars dataset to exemplify and showcase these concepts. Let's take a look into it.\n",
+    "If you read my tutorialish article on the content of their first course [**My First Machine Learning Algorithm**](https://medium.com/@douglas.rochedo/decision-tree-and-random-forest-for-predicting-used-car-prices-9233478818b0) you will notice that I, unlike Kaggle, used a Used Cars dataset to exemplify and showcase these concepts. Let's take a look into it.\n",
     "\n",
     "### The Data"
    ]
@@ -219,8 +219,6 @@
     "I can find no better way to explain this than what has been said in the Kaggle course this article is based on, so I will quote it:\n",
     "\n",
     "*\"One-hot encoding creates new columns indicating the presence (or absence) of each possible value in the original data.\"*\n",
-    "\n",
-    "<!-- ![Kaggle One Hot Example](img/one_hot_encoding.png)-->\n",
     "\n",
     "<img src=\"img/one_hot_encoding.png\" alt=\"drawing\" height=\"300\"/>\n",
     "\n",
@@ -1018,7 +1016,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1034,7 +1032,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "260d53f25ae0bf85bd6e3ec476b46d4eecc4d51e8d1a97900adb19c003316dfe"
